unbranded version, maintains license reference to original but removes all branded variables and copy

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -7,8 +7,8 @@
 
 
 //Primary Palette
-$rp3-blue: #00aeef;
-$rp3-magenta:  #D10457;
+$blue: #00beef;
+$magenta:  #D10457;
 
 //Secondary Palette
 
@@ -19,4 +19,3 @@ $grey-light: #bcbec0;
 $grey: #666;
 $gray-dark: #343434;
 $white: white;
-
